--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,24 @@
 .ticket-header {
   color: darkblue;
 }
+
+h1 {
+  text-align: center;
+  color: darkgrey;
+}
+
+
+
+/* .appgrid {
+  display: grid;
+  height: 100vh;
+  grid-template-columns: 7fr 1fr;
+  grid-template-rows: 1fr 7fr;
+  grid-column-gap: 8px;
+  grid-row-gap: 7px;
+}
+  
+.leftheader { grid-area: 1 / 1 / 2 / 2; text-align: center; font-size: 18pt; font-weight: bold; display: flex; align-items: center; justify-content: center; border: 1px solid pink; }
+.rightheader { grid-area: 1 / 2 / 2 / 3; text-align: center; font-size: 18pt; font-weight: bold; display: flex; align-items: center; justify-content: center; border: 1px solid pink; }
+.shoparea { grid-area: 2 / 1 / 3 / 2; border: 1px solid pink;}
+.cartarea { grid-area: 2 / 2 / 3 / 3; border: 1px solid pink;}  */
