--- a/src/App.css
+++ b/src/App.css
@@ -17,8 +17,16 @@ h1 {
 }
 
 #itemlist {
-  width: 25vw;
-  /* height: 25vh; */
+  width: 30vw;
+}
+
+#cart {
+  color: darkgrey;
+}
+
+#cart h1, h2 {
+  color: darkblue;
+  text-align: left;
 }
 
 /* .appgrid {
